[metadata]
name = malipopy-mpesa
version = 0.1.0
author = Madegwa Kidii
author_email = madegwakidi@gmail.com
description = A Python M-Pesa payments library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/madegwa-kidii/malipopy-mpesa.git
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.0
